# WildMagic

./: .env.example  .gitignore  AGENTS.md  README.md  bench_models.py  main.py  pyproject.toml  wildmagic_config.json
docs/: AESTHETICS_AND_TONE.md  AGENT_PLAYTESTING.md  ARCHITECTURE.md  AUTOPLAY_PLAN.md  CAPABILITY_CARD_PLAN.md  CHARACTER_CREATION.md  CONTENT_FLESHING_ROADMAP.md  EMERGENT_QUESTS.md  EMERGENT_WORLD_CONTENT_PLAN.md  EMERGENT_WORLD_IMPLEMENTATION.md  EMERGENT_WORLD_PLAYTEST_PLAN.md  EMERGENT_WORLD_PRIMER.md  EMERGENT_WORLD_STRATEGY.md  EXECUTION_PLAN.md  FACTION_KILL_REPUTATION.md  HYBRID_GENERATION.md  ITEMS_AND_REAGENTS.md  LORE_CARDS.md  MODEL_CONFIG.md  NPC_MOVEMENT.md  SPELL_COMPENDIUM.md  WILD_MAGIC_SCHEMA.md  WILD_MAGIC_STATE_SURFACE_PLAN.md  WORLDBUILDING.md  WORLD_PROMISES.md  implementation_session_log.md
tests/: conftest.py  test_auras.py  test_autoplay.py  test_backlash.py  test_bonds_and_followers.py  test_canon_json.py  test_capability_routing.py  test_character_identity.py  test_combat_stance.py  test_concerns.py  test_config.py  test_config_contract.py  test_consequence_renderer.py  test_curses.py  test_deed_interpreter.py  test_deeds_and_legend.py  test_durable_writes.py  test_dynamic_schema_context.py  test_effect_registry.py  test_effect_transactions.py  test_emergent_phase0.py  test_emergent_quests.py  test_entity_unification.py  test_faction_kill_reactions.py  test_faction_pressure.py  test_faction_relationships.py  test_faction_roles.py  test_flesh.py  test_hybrid_generation.py  test_items.py  test_lore.py  test_lore_cards.py  (+38 more)
(+92 files in other folders)
